Enable type inference on test fixture results
This simplifies tests quite significantly especially when queries (and commands) define their return type (by implementing `Request`).